[package]
name = "gfimx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.3"
notify = "4.0.17"
data-encoding = "2.3.2"
ring = "0.16.20"
cron-parser = "0.7.9"
chrono = "0.4.19"
walkdir = "2.3.2"
regex = "1.5.5"
toml = "0.5.8"
serde_derive = "1.0.136"
serde = "1.0.136"