[package]
name = "gfimx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
crossbeam-channel = "0.5.3"
cron-parser = "0.7.9"
data-encoding = "2.3.2"
flexi_logger = "0.22.3"
log = "0.4.16"
notify = "4.0.17"
redis = "0.21.5"
regex = "1.5.5"
ring = "0.16.20"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
toml = "0.5.8"
walkdir = "2.3.2"

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["sync"]